[build-system]
requires = ["hatchling", "versioningit~=3.1.2"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "musify"
authors = [
  { name="George Martin Marino", email="gm.engineer+musify@pm.me" },
]
description = "A Swiss Army knife for programmatic music library management"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Intended Audience :: Developers",
]
dependencies = [
    "mutagen~=1.47.0",
    "aiorequestful~=1.0.20",
    "python-dateutil~=2.9.0",
    "Pillow~=11.2.1",
    "pydantic~=2.11.4",
]

[project.optional-dependencies]
all = [
    "musify[bars,musicbee,sqlite]",
]
bars = [
    "tqdm~=4.67.1",
]
musicbee = [
    "xmltodict~=0.14.2",
    "lxml~=5.4.0",
]
sqlite = [
    "aiorequestful[sqlite]~=1.0.20",
]

[project.urls]
"Documentation" = "https://geo-martino.github.io/musify/"
"Release Notes" = "https://geo-martino.github.io/musify/info/release-history.html"
"Contribute" = "https://geo-martino.github.io/musify/info/contributing.html"
"Source code" = "https://github.com/geo-martino/musify"
Issues = "https://github.com/geo-martino/musify/issues"

[dependency-groups]
dev = [
    "flake8",
    "grip",
    "jupyterlab",
    "ipywidgets",
]
test = [
    "musify[all]",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.26.0",
    "pytest-xdist~=3.6.1",
    "pytest-mock~=3.14.0",
    "aioresponses~=0.7.8",
    "pyyaml~=6.0.2",
    "pycountry~=24.6.1",
]
docs = [
    "sphinx~=8.2.3",
    "sphinx-rtd-theme~=3.0.2",
    "graphviz~=0.20.3",
    "sphinx-autodoc-typehints~=3.2.0",
    "autodocsumm~=0.2.14",
    "sphinxext-opengraph~=0.10.0",
    "matplotlib~=3.10.1",
    "sphinx-new-tab-link~=0.8.0",
]

[tool.uv]
default-groups = ["dev", "test", "docs"]

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]
default-version = "0.0.0"

[tool.versioningit.format]
# WORKAROUND: commits for actual production releases keep getting identified as dirty and/or with distance
#  Delete this config when fixed. It should be the commented lines below each (i.e. the default formats)
#distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{base_version}"
#dirty = "{base_version}+d{build_date:%Y%m%d}"
distance-dirty = "{base_version}"
#distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-color=yes"
markers = [
    "slow: marks test as slow (deselect with '-m \"not slow\"')",
    "manual: marks tests to be run only when manually directed to by the developer",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
